force-app/main/default/objects/Teacher__c/fields/CountOfCourses__c.field-meta.xml
<CustomField>
    <fullName>CountOfCourses__c</fullName>
    <label>CountOfCourses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>