force-app/main/default/objects/Teacher__c/fields/Teacher_Address__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Address__c</fullName>
    <label>Teacher Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>